// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workflow template snapshots > gaia-ci-pnpm-audit.yml matches snapshot 1`] = `
"name: GAIA CI — pnpm audit

# Generated by \`gaia automation render-workflows\`. Do not edit by hand —
# changes here are overwritten on the next \`/setup-gaia-ci --reconfigure\`.
# Source of truth: .gaia/automation.json + the templates under
# .gaia/cli/src/automation/templates/workflows/.

on:
  workflow_dispatch: {}
  schedule:
    - cron: '0 4 * * *'

permissions:
  contents: write
  pull-requests: write
  issues: write

concurrency:
  group: gaia-ci-pnpm-audit
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
      - name: Setup Node
        uses: actions/setup-node@v5
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        run: pnpm install --frozen-lockfile

      - name: Pre-run skip — open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip if an open gaia-ci PR by github-actions[bot] already exists.
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number --jq '.[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(node .gaia/cli/dist/index.js automation cron-decide pnpm-audit --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Run pnpm audit and open security PR for high/critical
        if: steps.pre_run.outputs.decision == 'run'
        env:
          RUN_COST_DOLLARS: "0"
        run: |
          set -euo pipefail
          audit_json=$(pnpm audit --json || true)
          high_count=$(printf '%s' "$audit_json" | jq '[.advisories | to_entries[] | .value | select(.severity == "high" or .severity == "critical")] | length')
          if [ "$high_count" = "0" ]; then
            echo "no high/critical findings"
            exit 0
          fi
          # For each high/critical advisory, open one issue and one targeted PR (UAT-008).
          printf '%s' "$audit_json" \\
            | jq -c '.advisories | to_entries[] | .value | select(.severity == "high" or .severity == "critical")' \\
            | while read -r advisory; do
                pkg=$(printf '%s' "$advisory" | jq -r '.module_name')
                severity=$(printf '%s' "$advisory" | jq -r '.severity')
                cve=$(printf '%s' "$advisory" | jq -r '.cves[0] // .id')
                url=$(printf '%s' "$advisory" | jq -r '.url')
                # Issue
                gh issue create \\
                  --title "[GAIA CI] $severity: $pkg ($cve)" \\
                  --label gaia-ci,security \\
                  --body "Severity: $severity\\nPackage: $pkg\\nAdvisory: $url"
                # Targeted single-package security PR
                branch="gaia-ci/security/$pkg-$(date -u +%Y%m%d-%H%M%S)"
                git checkout -b "$branch" main
                pnpm update "$pkg"
                git add -A
                git commit -m "chore(security): bump $pkg ($cve)"
                git push origin "$branch"
                gh pr create \\
                  --title "chore(security): bump $pkg ($cve)" \\
                  --body "Targeted security patch. Auto-merges on green CI." \\
                  --label gaia-ci,security \\
                  --head "$branch" \\
                  --base "\${{ github.event.repository.default_branch }}"
                git checkout -
              done

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.

      - name: Open and auto-merge gaia-ci PR
        if: steps.pre_run.outputs.decision == 'run' && success()
        run: |
          set -euo pipefail
          branch="gaia-ci/pnpm-audit/$(date -u +%Y%m%d-%H%M%S)"
          git checkout -b "$branch"
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes; nothing to PR"
            exit 0
          fi
          git add -A
          git commit -m "chore(pnpm-audit): GAIA CI run"
          git push origin "$branch"
          pr_url=$(gh pr create \\
            --title "chore(pnpm-audit): GAIA CI run" \\
            --body "Generated by GAIA CI (GAIA CI — pnpm audit)." \\
            --label gaia-ci \\
            --head "$branch" \\
            --base "\${{ github.event.repository.default_branch }}")
          pr_number=$(printf '%s' "$pr_url" | grep -oE '[0-9]+$')

          gh pr merge "$pr_number" --auto --squash


      - name: Post-run cost accounting
        if: always() && steps.pre_run.outputs.decision == 'run'
        env:
          GAIA_CI_COST_CEILING: '5'
        run: |
          set -euo pipefail
          # Cost is emitted by anthropics/claude-code-action when used; for
          # non-LLM tools (pnpm-audit, stale-branches) the cost is zero.
          cost="\${RUN_COST_DOLLARS:-0}"
          node .gaia/cli/dist/index.js automation record-run \\
            pnpm-audit \\
            --sha "$(git rev-parse HEAD)" \\
            --trigger cron \\
            --cost "$cost"
          # If the run exceeded the per-run cost ceiling, record-run sets
          # cost_overage=true. Open one issue for visibility (UAT-018).
          overage=$(node .gaia/cli/dist/index.js automation read-state pnpm-audit --json \\
            | jq -r '.cost_overage // false')
          if [ "$overage" = "true" ]; then
            gh issue create \\
              --title "[GAIA CI] GAIA CI — pnpm audit cost overage: \\$\${cost}" \\
              --label gaia-ci,priority:high \\
              --body "GAIA CI — pnpm audit run reported \\$\${cost} (ceiling: \\$\${GAIA_CI_COST_CEILING}). Next run for pnpm-audit is suppressed until cleared via 'gaia automation clear-overage pnpm-audit'."
          fi

"
`;

exports[`workflow template snapshots > gaia-ci-sharpen.yml matches snapshot 1`] = `
"name: GAIA CI — Sharpen

# Generated by \`gaia automation render-workflows\`. Do not edit by hand —
# changes here are overwritten on the next \`/setup-gaia-ci --reconfigure\`.
# Source of truth: .gaia/automation.json + the templates under
# .gaia/cli/src/automation/templates/workflows/.

on:
  workflow_dispatch: {}
  schedule:
    - cron: '0 4 * * 0'

permissions:
  contents: write
  pull-requests: write
  issues: write

concurrency:
  group: gaia-ci-sharpen
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
      - name: Setup Node
        uses: actions/setup-node@v5
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        run: pnpm install --frozen-lockfile

      - name: Pre-run skip — open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip if an open gaia-ci PR by github-actions[bot] already exists.
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number --jq '.[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(node .gaia/cli/dist/index.js automation cron-decide sharpen --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Run sharpen and split major bumps
        if: steps.pre_run.outputs.decision == 'run'
        env:
          RUN_COST_DOLLARS: "0"  # placeholder; overwritten by claude-code-action wrapper
        run: |
          set -euo pipefail
          # TODO(slice-4): replace with real \`gaia sharpen run\` invocation.
          # Sharpen produces an updates.json describing per-package version deltas.
          node .gaia/cli/dist/index.js sharpen run --emit-updates updates.json
          # Patch+minor: leave on this branch (the auto-merge partial picks them up).
          # Major: split into a separate review-required PR (UAT-007).
          majors=$(jq -r '[.updates[] | select(.semver_class == "major")] | length' updates.json)
          if [ "$majors" -gt 0 ]; then
            branch="gaia-ci/sharpen/major-$(date -u +%Y%m%d-%H%M%S)"
            git checkout -b "$branch"
            jq -r '.updates[] | select(.semver_class == "major") | .name' updates.json \\
              | xargs -I{} pnpm update {} --latest
            git add -A
            git commit -m "chore(sharpen): semver-major bumps (review required)"
            git push origin "$branch"
            gh pr create \\
              --title "chore(sharpen): semver-major bumps (review required)" \\
              --body "Held for human review per SPEC. See updates.json for the package list." \\
              --label gaia-ci,needs-human-review \\
              --head "$branch" \\
              --base "\${{ github.event.repository.default_branch }}"
            git checkout -
            # Remove the major bumps from the patch/minor branch so the auto-merge
            # partial only takes the safe set.
            jq -r '.updates[] | select(.semver_class == "major") | .name' updates.json \\
              | xargs -I{} git checkout HEAD -- node_modules/{} 2>/dev/null || true
            pnpm install --frozen-lockfile
          fi

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.

      - name: Open and auto-merge gaia-ci PR
        if: steps.pre_run.outputs.decision == 'run' && success()
        run: |
          set -euo pipefail
          branch="gaia-ci/sharpen/$(date -u +%Y%m%d-%H%M%S)"
          git checkout -b "$branch"
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes; nothing to PR"
            exit 0
          fi
          git add -A
          git commit -m "chore(sharpen): GAIA CI run"
          git push origin "$branch"
          pr_url=$(gh pr create \\
            --title "chore(sharpen): GAIA CI run" \\
            --body "Generated by GAIA CI (GAIA CI — Sharpen)." \\
            --label gaia-ci \\
            --head "$branch" \\
            --base "\${{ github.event.repository.default_branch }}")
          pr_number=$(printf '%s' "$pr_url" | grep -oE '[0-9]+$')

          gh pr merge "$pr_number" --auto --squash


      - name: Post-run cost accounting
        if: always() && steps.pre_run.outputs.decision == 'run'
        env:
          GAIA_CI_COST_CEILING: '5'
        run: |
          set -euo pipefail
          # Cost is emitted by anthropics/claude-code-action when used; for
          # non-LLM tools (pnpm-audit, stale-branches) the cost is zero.
          cost="\${RUN_COST_DOLLARS:-0}"
          node .gaia/cli/dist/index.js automation record-run \\
            sharpen \\
            --sha "$(git rev-parse HEAD)" \\
            --trigger cron \\
            --cost "$cost"
          # If the run exceeded the per-run cost ceiling, record-run sets
          # cost_overage=true. Open one issue for visibility (UAT-018).
          overage=$(node .gaia/cli/dist/index.js automation read-state sharpen --json \\
            | jq -r '.cost_overage // false')
          if [ "$overage" = "true" ]; then
            gh issue create \\
              --title "[GAIA CI] GAIA CI — Sharpen cost overage: \\$\${cost}" \\
              --label gaia-ci,priority:high \\
              --body "GAIA CI — Sharpen run reported \\$\${cost} (ceiling: \\$\${GAIA_CI_COST_CEILING}). Next run for sharpen is suppressed until cleared via 'gaia automation clear-overage sharpen'."
          fi

"
`;

exports[`workflow template snapshots > gaia-ci-stale-branches.yml matches snapshot 1`] = `
"name: GAIA CI — Stale Branches

# Generated by \`gaia automation render-workflows\`. Do not edit by hand —
# changes here are overwritten on the next \`/setup-gaia-ci --reconfigure\`.
# Source of truth: .gaia/automation.json + the templates under
# .gaia/cli/src/automation/templates/workflows/.

on:
  workflow_dispatch: {}
  schedule:
    - cron: '0 4 1-7 * 0'

permissions:
  contents: write
  pull-requests: write
  issues: write

concurrency:
  group: gaia-ci-stale-branches
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
      - name: Setup Node
        uses: actions/setup-node@v5
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        run: pnpm install --frozen-lockfile

      - name: Pre-run skip — open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip if an open gaia-ci PR by github-actions[bot] already exists.
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number --jq '.[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(node .gaia/cli/dist/index.js automation cron-decide stale-branches --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Delete branches merged > 30 days ago
        if: steps.pre_run.outputs.decision == 'run'
        env:
          RUN_COST_DOLLARS: "0"
        run: |
          set -euo pipefail
          cutoff=$(date -u -d '30 days ago' +%s 2>/dev/null || date -u -v-30d +%s)
          # Walk all branches except the default branch (UAT-011).
          default=$(gh api repos/\${{ github.repository }} --jq '.default_branch')
          gh api repos/\${{ github.repository }}/branches --paginate --jq '.[].name' \\
            | grep -vF "$default" \\
            | while read -r br; do
                # Skip if there's an open PR with this branch as head.
                open=$(gh pr list --state open --head "$br" --json number --jq '.[0].number // empty')
                if [ -n "$open" ]; then continue; fi
                # Find the most recent merged PR with this branch as head.
                merged_at=$(gh pr list --state closed --head "$br" --json mergedAt --jq '.[0].mergedAt // empty')
                if [ -z "$merged_at" ]; then continue; fi
                merged_ts=$(date -u -d "$merged_at" +%s 2>/dev/null || date -u -j -f '%Y-%m-%dT%H:%M:%SZ' "$merged_at" +%s)
                if [ "$merged_ts" -lt "$cutoff" ]; then
                  echo "deleting stale branch: $br (merged $merged_at)"
                  gh api -X DELETE repos/\${{ github.repository }}/git/refs/heads/$br
                fi
              done

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.


      - name: Post-run cost accounting
        if: always() && steps.pre_run.outputs.decision == 'run'
        env:
          GAIA_CI_COST_CEILING: '5'
        run: |
          set -euo pipefail
          # Cost is emitted by anthropics/claude-code-action when used; for
          # non-LLM tools (pnpm-audit, stale-branches) the cost is zero.
          cost="\${RUN_COST_DOLLARS:-0}"
          node .gaia/cli/dist/index.js automation record-run \\
            stale-branches \\
            --sha "$(git rev-parse HEAD)" \\
            --trigger cron \\
            --cost "$cost"
          # If the run exceeded the per-run cost ceiling, record-run sets
          # cost_overage=true. Open one issue for visibility (UAT-018).
          overage=$(node .gaia/cli/dist/index.js automation read-state stale-branches --json \\
            | jq -r '.cost_overage // false')
          if [ "$overage" = "true" ]; then
            gh issue create \\
              --title "[GAIA CI] GAIA CI — Stale Branches cost overage: \\$\${cost}" \\
              --label gaia-ci,priority:high \\
              --body "GAIA CI — Stale Branches run reported \\$\${cost} (ceiling: \\$\${GAIA_CI_COST_CEILING}). Next run for stale-branches is suppressed until cleared via 'gaia automation clear-overage stale-branches'."
          fi

"
`;

exports[`workflow template snapshots > gaia-ci-wiki.yml matches snapshot 1`] = `
"name: GAIA CI — Wiki

# Generated by \`gaia automation render-workflows\`. Do not edit by hand —
# changes here are overwritten on the next \`/setup-gaia-ci --reconfigure\`.
# Source of truth: .gaia/automation.json + the templates under
# .gaia/cli/src/automation/templates/workflows/.

on:
  workflow_dispatch: {}
  schedule:
    - cron: '0 4 * * *'

permissions:
  contents: write
  pull-requests: write
  issues: write

concurrency:
  group: gaia-ci-wiki
  cancel-in-progress: false

env:
  GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
  CLAUDE_CODE_OAUTH_TOKEN: \${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
  ANTHROPIC_API_KEY: \${{ secrets.ANTHROPIC_API_KEY }}

jobs:
  run:
    runs-on: ubuntu-latest
    timeout-minutes: 60
    steps:
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
      - name: Setup Node
        uses: actions/setup-node@v5
        with:
          node-version-file: '.node-version'
          cache: 'pnpm'
      - name: Install dependencies
        run: pnpm install --frozen-lockfile

      - name: Pre-run skip — open gaia-ci PR or cron-decide
        id: pre_run
        run: |
          set -euo pipefail
          # Skip if an open gaia-ci PR by github-actions[bot] already exists.
          existing_pr=$(gh pr list --state open --label gaia-ci \\
            --search 'author:app/github-actions' \\
            --json number --jq '.[0].number // empty')
          if [ -n "$existing_pr" ]; then
            echo "open gaia-ci PR #$existing_pr; skipping"
            echo "decision=skip" >> "$GITHUB_OUTPUT"
            echo "reason=open_pr" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          # Otherwise consult the smart-cron decision primitive.
          decision_json=$(node .gaia/cli/dist/index.js automation cron-decide wiki --json)
          decision=$(printf '%s' "$decision_json" | jq -r '.decision')
          reason=$(printf '%s' "$decision_json" | jq -r '.reason')
          skip_log_line=$(printf '%s' "$decision_json" | jq -r '.skip_log_line // empty')
          if [ "$decision" = "skip" ]; then
            echo "$skip_log_line"
          fi
          echo "decision=$decision" >> "$GITHUB_OUTPUT"
          echo "reason=$reason" >> "$GITHUB_OUTPUT"

      - name: Quality Gate
        if: steps.pre_run.outputs.decision == 'run'
        run: |
          set -euo pipefail
          pnpm typecheck
          pnpm lint


      - name: Run gaia wiki chain
        if: steps.pre_run.outputs.decision == 'run'
        env:
          RUN_COST_DOLLARS: "0"  # placeholder; overwritten by claude-code-action wrapper
        run: |
          set -euo pipefail
          node .gaia/cli/dist/index.js wiki sync
          node .gaia/cli/dist/index.js wiki consolidate
          node .gaia/cli/dist/index.js wiki lint

      # Auto-merge partial. Gated on \`enable_auto_merge\` so the
      # stale-branches workflow (which doesn't open a PR) emits no
      # merge invocation in its rendered YAML.

      - name: Open and auto-merge gaia-ci PR
        if: steps.pre_run.outputs.decision == 'run' && success()
        run: |
          set -euo pipefail
          branch="gaia-ci/wiki/$(date -u +%Y%m%d-%H%M%S)"
          git checkout -b "$branch"
          if [ -z "$(git status --porcelain)" ]; then
            echo "no changes; nothing to PR"
            exit 0
          fi
          git add -A
          git commit -m "chore(wiki): GAIA CI run"
          git push origin "$branch"
          pr_url=$(gh pr create \\
            --title "chore(wiki): GAIA CI run" \\
            --body "Generated by GAIA CI (GAIA CI — Wiki)." \\
            --label gaia-ci \\
            --head "$branch" \\
            --base "\${{ github.event.repository.default_branch }}")
          pr_number=$(printf '%s' "$pr_url" | grep -oE '[0-9]+$')

          # Wiki diff-size sanity check: if >25% of wiki bytes changed,
          # hold for human review (UAT-003).
          if [ "$(node .gaia/cli/dist/index.js wiki diff-size --threshold-pct 25)" = "exceeded" ]; then
            gh pr edit "$pr_number" --add-label needs-human-review
            echo "diff-size > 25%; holding for human review"
            exit 0
          fi

          gh pr merge "$pr_number" --auto --squash


      - name: Post-run cost accounting
        if: always() && steps.pre_run.outputs.decision == 'run'
        env:
          GAIA_CI_COST_CEILING: '5'
        run: |
          set -euo pipefail
          # Cost is emitted by anthropics/claude-code-action when used; for
          # non-LLM tools (pnpm-audit, stale-branches) the cost is zero.
          cost="\${RUN_COST_DOLLARS:-0}"
          node .gaia/cli/dist/index.js automation record-run \\
            wiki \\
            --sha "$(git rev-parse HEAD)" \\
            --trigger cron \\
            --cost "$cost"
          # If the run exceeded the per-run cost ceiling, record-run sets
          # cost_overage=true. Open one issue for visibility (UAT-018).
          overage=$(node .gaia/cli/dist/index.js automation read-state wiki --json \\
            | jq -r '.cost_overage // false')
          if [ "$overage" = "true" ]; then
            gh issue create \\
              --title "[GAIA CI] GAIA CI — Wiki cost overage: \\$\${cost}" \\
              --label gaia-ci,priority:high \\
              --body "GAIA CI — Wiki run reported \\$\${cost} (ceiling: \\$\${GAIA_CI_COST_CEILING}). Next run for wiki is suppressed until cleared via 'gaia automation clear-overage wiki'."
          fi

"
`;
